Changed src folder to html

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web-server:
     build: .
     volumes:
-      - ./src:/var/www/html
+      - ./html:/var/www/html
     ports:
       - '8080:80'
     links:
