--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: 22 
-          source: "src/*"
-          target: "/var/www/html"
+          source: "html/*"
+          target: "/var/www"
           overwite: true 
