Revert "Merge branch 'main' of https://github.com/COP-4331C-Group-11/SmallGroup11 into main"
This reverts commit 362965a92787625ffdbb01a2d60287ea3d9a2102, reversing
changes made to 88bb487c7dbc3c930187ef3aff75cbc3c916f00e.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web-server:
     build: .
     volumes:
-      - ./html:/var/www/html
+      - ./src:/var/www/html
     ports:
       - '8080:80'
     links:
